--- a/app/(private routes)/profile/edit/page.module.css
+++ b/app/(private routes)/profile/edit/page.module.css
@@ -31,8 +31,8 @@
   object-fit: cover;
   display: block;
   margin: 0 auto 24px auto;
+  box-shadow: 0 0 0 3px #f1f1f1;
 }
-
 .profileInfo {
   font-size: 18px;
   color: #333;
